# YAMotion

./: README.md  tmp.nc  unnamed.gcmc  unnamed.nc  unnamed.tap  unnamed1.gcmc  unnamed1.tap  задачи.txt
Data/: 1.nc  2.nc  23.nc  3.nc  BlockDelete.ngc  CSS.ngc  ConditionalHalt.ngc  DynoMotion.ngc  DynoMotionBig.ngc  DynoMotionRotateB.ngc  FullCircle.ngc  G83_G18_Peck_Drill_Cycle.ngc  G83_Peck_Drill_Cycle.ngc  LinearFromGCode.ngc  ParametricGCode.ngc  ProbeMachY.ngc  RigidTapMach3.ngc  Simple Demo.ngc  Subroutine.ngc  SubroutineWithConditionals.ngc  TestG85.ngc  TestUSBRate.ngc  aa.ngc  bbb.ngc  box.ngc  box1.ngc  box10.ngc  circles.ngc  ear.ngc  mill.gcmc  mill.tap  right.nc  spiral.ngc  testG17G18G19.ngc  unnamed.gcmc  unnamed.nc  unnamed.tap  unnamed1.gcmc  unnamed1.nc  unnamed1.tap  (+8 more)
macroses/: circular_pocket.gcmc  circular_pocket.nc  circular_pocket.xml  cut_circle.gcmc  cut_circle.tap  cut_circle.xml  cut_circle1.xml  cut_circular_pocket.gcmc  cut_circular_pocket.xml  cut_rect.gcmc  cut_rect.tap  cut_rect.xml  cut_roundrect.gcmc  cut_roundrect.xml  drill.gcmc  drill.tap  init_value.gcmc  mill_rect.gcmc  mill_rect.nc  mill_rect.xml  pocket_circle.gcmc  pocket_circle.xml  rule.gcmc  (+10 more)
src/gcmcfont/fontdata/: Makefile.am  Makefile.in  dosvg.bat  font_hsans_1.glyph  font_hsans_1_rs.c  font_hsans_1_rs.glyph  font_hsans_1b.c  font_hsans_2.c  font_hsans_2.glyph  font_hscript_1.glyph  font_hscript_2.c  font_hscript_2.glyph  font_htimes.c  font_htimes.glyph  font_htimes_bold.c  font_htimes_bold.glyph  font_htimes_italic.glyph  font_htimes_italic_bold.glyph  mkfonts.sh
(+422 files in other folders)
